fix[UI]: dark mode color adjusted

--- a/static/style.css
+++ b/static/style.css
@@ -21,16 +21,16 @@
 }
 
 .dark-mode {
-    --background-color: #121212;
-    --sidebar-background: #1f1f1f;
+    --background-color: #000;
+    --sidebar-background: #010409;
     --sidebar-text-color: #ffffff;
-    --sidebar-active-background: #3a3a3a;
-    --header-background: #1f1f1f;
-    --header-border-color: #3a3a3a;
-    --email-item-border-color: #3a3a3a;
+    --sidebar-active-background: #15191f;
+    --header-background: #ffffff;
+    --header-border-color: #e0e0e0;
+    --email-item-border-color: #343140;
     --unread-email-background: #15191f;
     --email-item-hover-background: var(--sidebar-active-background);
-    --text-color: #ffffff;
+    --text-color: #212121;
     --primary-color: #235ccf;
     --scroll-bg: #2c2c2c;
     --scroll-handle: #555;
